--- a/samples/metaapp/src/main/res/values/strings.xml
+++ b/samples/metaapp/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Metaapp</string>
+    <string name="demo_fragment">Demo</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
